--- a/rules/codebuild.yaml
+++ b/rules/codebuild.yaml
@@ -19,4 +19,4 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
