--- a/rules/elasticsearch.yaml
+++ b/rules/elasticsearch.yaml
@@ -20,7 +20,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
     - alert: AwsCloudwatchElasticSearchHealthStatusRed
       annotations:
         summary: ElasticSearch Cluster health status is RED
@@ -31,7 +30,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
     - alert: AwsCloudwatchElasticSearchHealthStatusYellow
       annotations:
         summary: ElasticSearch Cluster health status is YELLOW
@@ -41,8 +39,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
-        asy_itsm_severity: medium
+        severity: warning
     - alert: AwsCloudwatchElasticSearchMasterNotReachable
       annotations:
         summary: ElasticSearch Cluster master node is not reachable
@@ -53,7 +50,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
     - alert: AwsCloudwatchElasticSearchHealthUnassignedShards
       annotations:
         summary: ElasticSearch Cluster has unassigned shards
@@ -63,7 +59,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchElasticSearchHealthRelocatingShards
       annotations:
         summary: ElasticSearch Cluster is relocating shards
@@ -73,7 +69,7 @@ spec:
       for: 30m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchElasticSearchHealthActiveShards
       annotations:
         summary: ElasticSearch Clusters has no active shards
@@ -90,7 +86,7 @@ spec:
         description: ElasticSearch Cluster CPU utilization is above {{$value}}% for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/opensearch-service/latest/developerguide/handling-errors.html
       expr: aws_cloudwatch_ES_CPUUtilization_ClientId_DomainName > 90
-      for: 15m
+      for: 60m
       labels:
         rule_source: opswatch-prometheus-rules
         severity: warning
@@ -100,7 +96,7 @@ spec:
         description: ElasticSearch Cluster Connection error count is {{$value}} for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/opensearch-service/latest/developerguide/handling-errors.html
       expr: (aws_cloudwatch_ES_3xx_ClientId_DomainName > 100) OR (aws_cloudwatch_ES_4xx_ClientId_DomainName > 100) OR (aws_cloudwatch_ES_5xx_ClientId_DomainName > 100)
-      for: 15m
+      for: 45m
       labels:
         rule_source: opswatch-prometheus-rules
         severity: warning
