--- a/rules/efs.yaml
+++ b/rules/efs.yaml
@@ -20,7 +20,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
     - alert: AwsCloudwatchEFSBurstCreditBalancePrediction
       annotations:
         summary: EFS burst credit balance will be below 10 in 2 hours
@@ -40,4 +39,4 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
