--- a/rules/tgw.yaml
+++ b/rules/tgw.yaml
@@ -19,7 +19,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchTGWAttachmentDropCountBlackhole
       annotations:
         summary: TGWAttachment Drop Count Blackhole is above 10
@@ -29,7 +29,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchTGWDropCountNoRoute
       annotations:
         summary: TGW Drop Count No Route is above 10
@@ -39,7 +39,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchTGWAttachmentDropCountNoRoute
       annotations:
         summary: TGW Drop Count NoRoute is above 10
@@ -49,7 +49,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchTGWPacketDropCountBlackhole
       annotations:
         summary: TGWAttachment Packet Drop Count Blackhole is above 10
@@ -59,7 +59,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchTGWAttachmentPacketDropCountBlackhole
       annotations:
         summary: TGWAttachment Packet Drop Count Blackhole is above 10
@@ -69,7 +69,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchTGWPacketDropCountNoRoute
       annotations:
         summary: TGW Packet Drop Count Blackhole is above 10
@@ -79,7 +79,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchTGWAttachmentPacketDropCountNoRoute
       annotations:
         summary: TGWAttachment Packet Drop Count No Route is above 10
@@ -89,4 +89,4 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
