Add some alarm classifications
Signed-off-by: Patrick Robinson <patrick.robinson@bertelsmann.de>

--- a/rules/alb.yaml
+++ b/rules/alb.yaml
@@ -19,6 +19,7 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: warning
+        alarm_class: REACTIVE
   - name: alb.rules
     rules:
     - alert: AwsCloudwatchAlbTargetResponseTimeSlow
