--- a/rules/backup.yaml
+++ b/rules/backup.yaml
@@ -20,3 +20,5 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: warning
+        alarm_class: REACTIVE
+        alarm_scope: INTERNAL
