--- a/rules/kafka.yaml
+++ b/rules/kafka.yaml
@@ -25,6 +25,7 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: warning
+        alarm_class: REACTIVE
       annotations:
         summary: 'Kafka: Zookeeper disconnected.'
         description: 'Zookeeper disconnected.'
