--- a/rules/route53.yaml
+++ b/rules/route53.yaml
@@ -30,3 +30,5 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: warning
+        alarm_class: REACTIVE
+        ci_operational: 'false'
