--- a/rules/asg.yaml
+++ b/rules/asg.yaml
@@ -40,4 +40,5 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: warning
+        alarm_class: REACTIVE
 # TODO: lambda sensu saas check too many terminated instances after each other?
