--- a/rules/rds.yaml
+++ b/rules/rds.yaml
@@ -291,12 +291,23 @@ spec:
         rule_source: opswatch-prometheus-rules
         severity: critical
         asy_itsm_severity: medium
+    - alert: AwsCloudwatchRdsFreeStoragePrediction
+      annotations:
+        summary: RDS free storage is predicted to run out
+        description: RDS free storage prediction for DB instance {{ $labels.dimension_DBInstanceIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        runbook_url: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Troubleshooting.html#CHAP_Troubleshooting.Storage
+      expr: round(predict_linear(aws_cloudwatch_RDS_FreeStorageSpace_DBInstanceIdentifier[20m], 3600 * 6)) < 1000000000
+      for: 15m
+      labels:
+        rule_source: opswatch-prometheus-rules
+        severity: critical
+        asy_itsm_severity: high
     - alert: AwsCloudwatchRdsFreeStorage
       annotations:
-        summary: RDS free storage is less than 4GB
+        summary: RDS free storage is less than 2GB
         description: RDS free storage is {{$value}}GB for DB instance {{ $labels.dimension_DBInstanceIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Troubleshooting.html#CHAP_Troubleshooting.Storage
-      expr: round(aws_cloudwatch_RDS_FreeStorageSpace_DBInstanceIdentifier) < 4000000000
+      expr: round(aws_cloudwatch_RDS_FreeStorageSpace_DBInstanceIdentifier) < 2000000000
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
